--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,38 +3,39 @@
 Variables
 ===============
 */
+@import url('https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Open+Sans&family=Prompt:ital,wght@0,100;0,300;1,300&display=swap');
 
 :root {
   /* dark shades of primary color*/
 
   --clr-primary-1: hsl(245, 91%, 17%);
   --clr-primary-2: hsl(245, 84%, 25%);
-  --clr-primary-3: hsl(245, 81%, 29%);
+  --clr-primary-3: 	#5c4404;
   --clr-primary-4: hsl(245, 77%, 34%);
-  --clr-primary-5: hsl(245, 62%, 45%);
+  --clr-primary-5: #9c562e;
   /* lighter shades of primary color */
-  --clr-primary-6: hsl(245, 57%, 50%);
-  --clr-primary-7: hsl(245, 65%, 59%);
-  --clr-primary-8: hsl(245, 80%, 74%);
-  --clr-primary-9: hsl(245, 94%, 87%);
-  --clr-primary-10: hsl(245, 87%, 94%);
+  --clr-primary-6: hsl(24, 57%, 50%);
+  --clr-primary-7: hsl(24, 65%, 59%);
+  --clr-primary-8: hsl(24, 80%, 74%);
+  --clr-primary-9: hsl(24, 94%, 87%);
+  --clr-primary-10: hsl(24, 87%, 94%);
   /* darkest grey - used for headings */
   --clr-grey-1: hsl(209, 61%, 16%);
   --clr-grey-3: hsl(209, 34%, 30%);
   --clr-grey-4: hsl(209, 28%, 39%);
   /* grey used for paragraphs */
-  --clr-grey-5: hsl(210, 22%, 49%);
-  --clr-grey-8: hsl(210, 31%, 80%);
-  --clr-grey-9: hsl(212, 33%, 89%);
-  --clr-grey-10: hsl(206, 33%, 96%);
+  --clr-grey-5: hsl(34, 22%, 49%);
+  --clr-grey-8: hsl(34, 31%, 80%);
+  --clr-grey-9: hsl(34, 33%, 89%);
+  --clr-grey-10: hsl(34, 33%, 96%);
   --clr-green-dark: hsl(125, 67%, 35%);
   --clr-green-light: hsl(134, 41%, 88%);
   --clr-red-dark: hsl(360, 67%, 44%);
   --clr-red-light: hsl(360, 71%, 66%);
   --clr-white: #fff;
   --clr-black: #0a0c10;
-  --ff-primary: 'Roboto', sans-serif;
-  --ff-secondary: 'Open Sans', sans-serif;
+  --ff-primary:'Prompt', sans-serif;
+  --ff-secondary:'Charm',cursive;
   --transition: all 0.3s linear;
   --spacing: 0.1rem;
   --radius: 0.25rem;
@@ -57,7 +58,7 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: var(--ff-secondary);
+  font-family: var(--ff-primary);
   background: var(--clr-white);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -201,10 +202,11 @@ Navbar
 }
 .nav-logo {
   display: block;
-  height: 40px;
+  height: 60px;
+  margin-top: 2rem;
 }
 .nav-logo img {
-  height: 100%;
+  height: 50%;
 }
 .toggle-btn {
   font-size: 2rem;
@@ -256,14 +258,14 @@ Navbar
     letter-spacing: var(--spacing);
     font-size: 1rem;
     transition: var(--transition);
-    font-family: var(--ff-secondary);
+    font-family: var(--ff-primary);
     cursor: pointer;
     padding: 0.25rem 0.5rem;
     border-radius: var(--radius);
   }
   .page-link:hover {
     background: var(--clr-primary-5);
-    color: var(--clr-primary-10);
+    color: var(--clr-white);
   }
   .nav-icons {
     display: flex;
@@ -371,8 +373,8 @@ Hero
     height: 20rem;
   }
   .hero-person {
-    width: 20rem;
-    height: 20rem;
+    width: 15rem;
+    height: 25rem;
     display: block;
     position: absolute;
     bottom: 0;
@@ -464,7 +466,7 @@ Single Pages
 }
 /* error page */
 .error-page {
-  background: var(--clr-primary-10);
+  background: var( --clr-white);
 }
 .error-page span {
   font-size: 10rem;
@@ -642,4 +644,63 @@ Footer
   color: var(--clr-white);
   text-transform: uppercase;
   letter-spacing: var(--spacing);
+}
+
+/* =====state==== */
+
+.state {
+  text-align:center;
+  letter-spacing: var(--mainSpacing);
+  color: var(--mainWhite);
+  margin-left: 30rem;
+}
+.state h1 {
+  font-family:var(--ff-secondary);
+  font-size: 3.3rem;
+  color: #4c1929;
+  text-transform: uppercase;
+  margin-bottom: 4rem;
+  padding: 0 1rem;
+  letter-spacing: 6px;
+}
+.state h2 {
+  font-size: 2rem;
+  text-transform: uppercase;
+  margin-bottom: 2rem;
+  padding: 0 1rem;
+  letter-spacing: 6px;
+}
+.state h3 {
+  font-weight: bold;
+  /* font-style: italic; */
+  line-height: 2.5;
+  width: 85%;
+  margin: 0 auto;
+  margin-bottom: 2rem;
+}
+.state h4 {
+  font-size: 1.3rem;
+  font-weight: bold;
+  font-style: italic;
+  line-height: 2.5;
+  width: 85%;
+  margin: 0 auto;
+  margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .state h1 {
+    font-size: 4.5rem;
+  }
+  .state h2 {
+    font-size: 3rem;
+  }
+
+  .state h3 {
+    width: 80%;
+  }
+  .state h4 {
+    width: 80%;
+  }
+
 }
