--- a/src/css/main.css
+++ b/src/css/main.css
@@ -446,7 +446,7 @@ Single Pages
 .newsletter-page,
 .success-page,
 .error-page {
-  min-height: calc(100vh - 7rem);
+  min-height: calc(100vh - 0.5px);
   background: var(--clr-grey-10);
 }
 .newsletter-page,
@@ -507,6 +507,21 @@ Single Pages
   display: block;
   width: 20rem;
 }
+.form-textarea {
+  padding: 0.5rem;
+  border: 0.5px solid var(--clr-grey-9);
+  border-right: transparent;
+  font-size: 1.1rem;
+  margin: 0.25rem 0;
+  border-radius: var(--radius);
+  display: block;
+  width: 20rem;
+  height: 8rem;
+ 
+  
+  
+}
+
 .submit-btn {
   font-weight: 400;
   text-transform: capitalize;
