--- a/src/css/main.css
+++ b/src/css/main.css
@@ -534,13 +534,13 @@ Single Pages
 }
 @media screen and (min-width: 992px) {
   .contact-form {
-    flex-direction: row;
+    flex-direction:column;
   }
   .form-control {
-    width: 15rem;
-    border-radius: 0;
+    width: 20rem;
+    border-radius: var(--radius);
   }
-  input[type='text'] {
+  /* input[type='text'] {
     border-top-left-radius: var(--radius);
     border-bottom-left-radius: var(--radius);
   }
@@ -550,7 +550,7 @@ Single Pages
   .submit-btn {
     border-top-right-radius: var(--radius);
     border-bottom-right-radius: var(--radius);
-  }
+  } */
 }
 
 /*
