--- a/src/css/main.css
+++ b/src/css/main.css
@@ -243,7 +243,8 @@ Navbar
   .nav-center {
     display: grid;
     grid-template-columns: auto 1fr auto;
-    column-gap: 2rem;
+    grid-gap: 2rem;
+    grid-column-gap: 2rem;
     align-items: center;
   }
   .nav-links {
@@ -418,6 +419,8 @@ Posts Component
     display: grid;
     grid-template-columns: 1fr 250px;
     column-gap: 1rem;
+    grid-gap: 1rem;
+    grid-column-gap: 1rem;
   }
 }
 /*
